--- a/plugin_App/CMakeLists.txt
+++ b/plugin_App/CMakeLists.txt
@@ -5,20 +5,19 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt6 COMPONENTS Core Gui Widgets REQUIRED)
+find_package(Qt5 COMPONENTS Widgets REQUIRED)
 
 add_executable(${PROJECT_NAME} 
      src/main.cpp
      src/mainwindow.cpp
-     src/mainwindow.h
      src/mainwindow.ui
-     src/helloPluginInterface.h
 )
 
-target_include_directories(${PROJECT_NAME} PRIVATE src/)
+target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/src/)
 
-target_link_libraries(${PROJECT_NAME} PRIVATE Qt::Core Qt::Gui Qt::Widgets 
+target_link_libraries(${PROJECT_NAME} PRIVATE
+        Qt::Widgets
 )
