NEW added plugin qwt CLEANUP returned override to header. Works!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.23)
+set(VCPKG_OVERLAY_PORTS ${CMAKE_CURRENT_LIST_DIR}/plugin_qwt/overlays)
 project(plugin)
 
 set(CMAKE_AUTOUIC ON)
@@ -11,4 +12,5 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_subdirectory(plugin_hello)
 add_subdirectory(plugin_echo)
 add_subdirectory(plugin_widget)
+add_subdirectory(plugin_qwt)
 add_subdirectory(plugin_App)
