--- a/plugin_qwt/CMakeLists.txt
+++ b/plugin_qwt/CMakeLists.txt
@@ -1,9 +1,11 @@
 cmake_minimum_required(VERSION 3.25)
+
 set(VCPKG_OVERLAY_PORTS ${CMAKE_CURRENT_LIST_DIR}/overlays)
+message("VCPKG_OVERLAY_PORTS ${VCPKG_OVERLAY_PORTS}")
+
 project(qwtWidget)
 
-
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 11)
 
 set(CMAKE_AUTOMOC ON)
 
@@ -20,22 +22,12 @@ add_library(${PROJECT_NAME} SHARED
         src/PlotWindow.cpp
         src/QwtPlugin.cpp
 )
-set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "-Wl,-rpath,../lib,-rpath,./")
 
 target_link_libraries(${PROJECT_NAME}
         PRIVATE
         Qt::Widgets
         Qwt::qwt
         )
+
 target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/src/)
 target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/../plugin_App/src/)
-
-add_executable(${PROJECT_NAME}_exe src/main.cpp)
-set_target_properties(${PROJECT_NAME}_exe PROPERTIES LINK_FLAGS "-Wl,-rpath,../lib,-rpath,./")
-target_link_libraries(${PROJECT_NAME}_exe
-        PRIVATE
-        Qt::Widgets
-        ${PROJECT_NAME}
-        Qwt::qwt
-        )
-
